CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT (DRAGON)
  
AUX_SOURCE_DIRECTORY (../gc/ GC)
AUX_SOURCE_DIRECTORY (lib/ LIB)
AUX_SOURCE_DIRECTORY (atoms/ ATOMS)
AUX_SOURCE_DIRECTORY (control/ CONTROL)
AUX_SOURCE_DIRECTORY (main/ MAIN)
AUX_SOURCE_DIRECTORY (lexer/ LEXER)
AUX_SOURCE_DIRECTORY (parser/ PARSER)
AUX_SOURCE_DIRECTORY (ast/ AST)
AUX_SOURCE_DIRECTORY (elaborate/ ELABORATE)
AUX_SOURCE_DIRECTORY (hil/ HIL)
AUX_SOURCE_DIRECTORY (ssa/ SSA)
AUX_SOURCE_DIRECTORY (machine/ MACHINE)
AUX_SOURCE_DIRECTORY (c-codegen/ CCODEGEN)
AUX_SOURCE_DIRECTORY (x86/ X86)

SET(SRC_LIST 
  main.c
  ${MAIN}
  ${GC}
  ${LIB}
  ${ATOMS}
  ${CONTROL}
  ${LEXER}
  ${PARSER}
  ${AST}
  ${ELABORATE}
  ${HIL}
  ${SSA}
  ${MACHINE}
  ${CCODEGEN}
  ${X86})

ADD_EXECUTABLE(dragon ${SRC_LIST})
